--- a/ssh/config
+++ b/ssh/config
@@ -2,3 +2,4 @@ Host github.com
   ProxyCommand ssh -q rliston@mercury.it.swin.edu.au nc %h %p
 Host *
   ForwardAgent yes
+  StrictHostKeyChecking no
