--- a/config/terminator/config
+++ b/config/terminator/config
@@ -1,14 +1,15 @@
 [global_config]
   title_hide_sizetext = True
   suppress_multiple_term_dialog = True
+  inactive_color_offset = 1.0
   enabled_plugins = LaunchpadCodeURLHandler, APTURLHandler, LaunchpadBugURLHandler
 [keybindings]
 [profiles]
   [[default]]
     palette = "#2e3436:#cc0000:#4e9a06:#c4a000:#3465a4:#75507b:#06989a:#d3d7cf:#555753:#ef2929:#8ae234:#fce94f:#729fcf:#ad7fa8:#729fcf:#eeeeec"
-    copy_on_selection = False 
     background_color = "#1f1f1f"
     background_image = None
+    scrollback_infinite = True
     foreground_color = "#ffffff"
 [layouts]
   [[default]]
