--- a/config/terminator/config
+++ b/config/terminator/config
@@ -1,22 +1,24 @@
 [global_config]
-  title_hide_sizetext = True
-  suppress_multiple_term_dialog = True
-  inactive_color_offset = 1.0
   enabled_plugins = LaunchpadCodeURLHandler, APTURLHandler, LaunchpadBugURLHandler
+  inactive_color_offset = 1.0
+  suppress_multiple_term_dialog = True
+  title_hide_sizetext = True
 [keybindings]
-[profiles]
-  [[default]]
-    palette = "#2e3436:#cc0000:#4e9a06:#c4a000:#3465a4:#75507b:#06989a:#d3d7cf:#555753:#ef2929:#8ae234:#fce94f:#729fcf:#ad7fa8:#729fcf:#eeeeec"
-    background_color = "#1f1f1f"
-    background_image = None
-    scrollback_infinite = True
-    foreground_color = "#ffffff"
 [layouts]
   [[default]]
     [[[child1]]]
-      type = Terminal
       parent = window0
+      type = Terminal
     [[[window0]]]
-      type = Window
       parent = ""
+      type = Window
 [plugins]
+[profiles]
+  [[default]]
+    background_color = "#1f1f1f"
+    background_image = None
+    font = Monospace 9
+    foreground_color = "#ffffff"
+    palette = "#2e3436:#cc0000:#4e9a06:#c4a000:#3465a4:#75507b:#06989a:#d3d7cf:#555753:#ef2929:#8ae234:#fce94f:#729fcf:#ad7fa8:#729fcf:#eeeeec"
+    scrollback_infinite = True
+    use_system_font = False
