--- a/config/terminator/config
+++ b/config/terminator/config
@@ -1,9 +1,19 @@
 [global_config]
-  enabled_plugins = LaunchpadCodeURLHandler, APTURLHandler, LaunchpadBugURLHandler
-  inactive_color_offset = 1.0
-  suppress_multiple_term_dialog = True
   title_hide_sizetext = True
+  inactive_color_offset = 1.0
+  enabled_plugins = LaunchpadCodeURLHandler, APTURLHandler, LaunchpadBugURLHandler
+  suppress_multiple_term_dialog = True
 [keybindings]
+[profiles]
+  [[default]]
+    background_color = "#1f1f1f"
+    cursor_color = "#ffffff"
+    font = Ubuntu Mono 12
+    foreground_color = "#ffffff"
+    scrollbar_position = hidden
+    scrollback_infinite = True
+    palette = "#2e3436:#cc0000:#73d216:#c4a000:#729fcf:#75507b:#729fcf:#d3d7cf:#555753:#ef2929:#8ae234:#fce94f:#729fcf:#ad7fa8:#34e2e2:#eeeeec"
+    use_system_font = False
 [layouts]
   [[default]]
     [[[child1]]]
@@ -14,12 +24,3 @@
       parent = ""
       type = Window
 [plugins]
-[profiles]
-  [[default]]
-    background_color = "#1f1f1f"
-    background_image = None
-    font = Ubuntu Mono 10
-    foreground_color = "#ffffff"
-    palette = "#2e3436:#cc0000:#4e9a06:#c4a000:#3465a4:#75507b:#06989a:#d3d7cf:#555753:#ef2929:#8ae234:#fce94f:#729fcf:#ad7fa8:#729fcf:#eeeeec"
-    scrollback_infinite = True
-    use_system_font = False
